from .ServicoUsuario import ServicoUsuario

class ServicoAluno(ServicoUsuario):
   pass